--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1752,6 +1752,9 @@
  LEC_expand_operation_qingdao:0 "在[744.GetName]扩展帮会活动"
  LEC_Bribe_Officals_qingdao:0 "贿赂[744.GetName]官员"
  LEC_Establish_qingdao_Syndicate:0 "建立[744.GetName]财团"
+ LEC_expand_operation_wenzhou:0 "在[803.GetName]扩展帮会活动"
+ LEC_Bribe_Officals_wenzhou:0 "贿赂[803.GetName]官员"
+ LEC_Establish_wenzhou_Syndicate:0 "建立[803.GetName]财团"
 
  LEC_attack_china:0 "征服[From.GetNameDef]"
  LEC_consolidate_coast:0 "巩固沿海租界"
@@ -2223,22 +2226,10 @@
  LEC_expand_operation_guangzhou:0 "在[592.GetName]扩展黑帮活动"
  LEC_Bribe_Officals_guangzhou:0 "贿赂[592.GetName]官员"
  LEC_Establish_guangzhou_Syndicate:0 "建立[592.GetName]财团"
- LEC_france_aomen:0 "取得澳门地区"
- LEC_expand_operation_aomen:0 "在[729.GetName]扩展黑帮活动"
- LEC_Bribe_Officals_aomen:0 "贿赂[729.GetName]官员"
- LEC_Establish_aomen_Syndicate:0 "建立[729.GetName]财团"
  LEC_france_xiamen:0 "取得厦门地区"
  LEC_expand_operation_xiamen:0 "在[802.GetName]扩展黑帮活动"
  LEC_Bribe_Officals_xiamen:0 "贿赂[802.GetName]官员"
  LEC_Establish_xiamen_Syndicate:0 "建立[802.GetName]财团"
- LEC_france_wenzhou:0 "取得温州地区"
- LEC_expand_operation_wenzhou:0 "在[803.GetName]扩展黑帮活动"
- LEC_Bribe_Officals_wenzhou:0 "贿赂[803.GetName]官员"
- LEC_Establish_wenzhou_Syndicate:0 "建立[803.GetName]财团"
- LEC_france_qing:0 "取得青岛地区"
- LEC_expand_operation_qing:0 "在[744.GetName]扩展黑帮活动"
- LEC_Bribe_Officals_qing:0 "贿赂[744.GetName]官员"
- LEC_Establish_qing_Syndicate:0 "建立[744.GetName]财团"
  LEC_france_weihaiwei:0 "取得威海卫地区"
  LEC_expand_operation_weihaiwei:0 "在[996.GetName]扩展黑帮活动"
  LEC_Bribe_Officals_weihaiwei:0 "贿赂[996.GetName]官员"
