--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -9,6 +9,32 @@
 
  GXC_really_kaiser: "中华的凯撒\n§g其人身负普鲁士铁血传统与东方天命观之双重血脉，乃是万王之王，龙与鹰之主，一切的统治者，德意志的威廉三世，中华的威廉一世！§!"
 
+ rising_star: "明日之星"
+ rising_star_desc: "§L这名军官在军事战术和大战略上展现出巨大的潜力。§!"
+ rising_star_tt: "§Y技能等级达到3级§!后移除"
+ master_of_ordnance: "炮兵大师"
+ master_of_ordnance_desc: "§L大炮从来不嫌多。§!"
+ light_infantry_officer: "轻步兵军官"
+ light_infantry_officer_desc: "§L不对称作战和敌后破坏行动的专家。§!"
+ RUS_ice_march_trait: "白军传承"
+ RUS_ice_march_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同布党红色分子浴血奋战。如果哪一天俄罗斯大地上再次出现社会主义，那么他必将起身与之抗争。§!"
+ RUS_red_army_trait: "红军老兵"
+ RUS_red_army_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同白军反动分子苦战到底。他们对社会主义理想高度忠诚，心怀革命席卷祖国的渺茫希望。面对殊死的斗争，他绝不会让战友的牺牲付诸东流！§!"
+ SQI_yue_dui: "姆吉卡"
+ SQI_yue_dui_desc: "§L这位领导人乃是女人中的女人，乐手中的乐手，女桐中的支配者，乐队中的统治者。§!"
+ GXC_tie_xue: "铁血"
+ GXC_tie_xue_desc: "§L这位舰娘来自一个名为铁血的国家。§!"
+ cruiser: "巡洋舰"
+ cruiser_desc: "§L坚船利炮，用最大口径的火炮装填最大当量的舰炮，只需要一炮就足以歼灭任何胆敢拦在前方的敌人。§!"
+ Zerstörer: "驱逐舰"
+ Zerstörer_desc: "§L她身披月华银甲游弋于潮汐之间，流线脊背轻划碧波惊起白练，深海之眼始终凝望星垂平野。当风暴在雷达神经末梢跃动时，导弹阵列如竖琴般震颤着死神韵律，鱼雷舱内蛰伏着深海的雷鸣。时而如孤傲浪人独行于惊涛裂岸，电子脉络吞吐着无形烽火；时而化身骑士统领铁甲洪流，穹苍之下以光锥为剑镌刻守护的铭文。暗夜巡航时舷侧垂落的波纹，恰似她抚过海面未及收敛的锋芒。§!"
+ Battleship: "战列舰"
+ Battleship_desc: "§L她是海上的霸主，是凌驾于一切战舰之上的真正王者。§!"
+ hang_mu: "航母"
+ hang_mu_desc: "§L她们的出现彻底改变了海战，大炮的时代结束了...§!"
+ tun_shi: "吞噬之漩"
+ tun_shi_desc: "§L一位优秀的指挥官需要亲临前线身先士卒。§!"
+
  KR_red_eminence: "红衣主教"
  KR_regional_traditionalist_leader: "地区传统派领袖"
  KR_head_of_intelligence: "间谍首脑"
