--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2328,6 +2328,9 @@
  LEC_TRIAD_KMT_RED_3:0 "中华民国"
  LEC_TRIAD_KMT_RED_3_ADJ:0 "中国"
  LEC_TRIAD_KMT_RED_3_DEF:0 "中华民国"
+ LEC_TRIAD_CHINA:0 "中华帝国"
+ LEC_TRIAD_CHINA_ADJ:0 "中华帝国"
+ LEC_TRIAD_CHINA_DEF:0 "中华帝国"
 
  LEC_du_yue_sheng: "杜月笙"
  LEC_Huang_Jinrong: "黄金荣"
@@ -2395,6 +2398,11 @@
  LEC_hongmen_conquest_tt:0 "§m我们将贯彻洪门神圣使命，复辟大明王朝！§!\n"
  LEC_republic_conquest_tt:0 "§4我们将带头再造共和中华！§!\n"
  LEC_coast_conquest_tt:0 "§9解锁在东海和太平洋扩张帮会的决议§!\n"
+ LEC_final_china_tt:0 "§R中华一统！§!\n"
+ LEC_he_is_back_tt:0 "§m那个男人回来了§!\n"
+ LEC_SHANG_EMPIRE_back:0 "§Y我们选择了扶持孔子后裔§!\n"
+ LEC_da_ming_back:0 "§H旧日王朝已然东山再起§!"
+ LEC_long_tou_control:0 "§H龙头们的掌控将持续§!"
 
  LEC_Opium_Idea1:0 "鸦片贸易"
  LEC_Opium_Idea3:0 "鸦片贸易"
@@ -2405,8 +2413,6 @@
  LEC_sao_hui_du_ping_ye:0 "焚毁毒品"
  LEC_sao_hui_du_ping_ye2:0 "睁一只眼闭一只眼"
  LEC_jue_xin_de_ge_ming_zhe:0 "觉醒的革命者"
- LEC_jue_xin_de_ge_ming_zhe2:0 "觉醒的革命者"
- LEC_jue_xin_de_ge_ming_zhe3:0 "觉醒的革命者"
  LEC_melting_pot_criminal_leftism_idea:0 "东方红色巴黎"
  LEC_cordiality_through_unfettered_capital_idea:0 "纵容资本"
  LEC_crooked_home_global_finance_idea:0 "罪金之都"
@@ -2420,8 +2426,20 @@
  LEC_take_torch_anti_qing_sentiment_idea:0 "反租界战争"
  LEC_galvanize_gambling_industry_idea:0 "梭哈博彩业"
  LEC_criminal_empire_span_east_idea:0 "罪企黎明"
+ LEC_workers_bill:0 "传统教育"
+ LEC_tanglarp_code:0 "儒法革命"
+ LEC_national_rebirth_idea:0 "国家重生"
+ LEC_national_rebirth_idea_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。"
+ LEC_national_rebirth_ideaQ:0 "国家重生"
+ LEC_national_rebirth_ideaQ_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将为他的人民而战。"
+ LEC_national_rebirth_ideaB:0 "国家重生"
+ LEC_national_rebirth_ideaB_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将在一位真正的领导人的手中重新绽放他的伟大。"
+ LEC_national_rebirth_idea2:0 "国家重生"
+ LEC_national_rebirth_idea2_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。大明浴火重生，这个精神上不朽的帝国将他的开创者的带领下重建过去的辉煌。"
+ LEC_wealth_cap:0 "财富限额"
+ LEC_wealth_cap_desc:0 "你知道的，没有人能富过我们的龙头。"
  
- LEC_wang_shang_hai_luo_bing_xun:0 "§R“上海罗宾汉”§!王亚樵众望所归"
+ LEC_wang_shang_hai_luo_bing_xun:0 "“上海罗宾汉”王亚樵众望所归"
  LEC_wang_shang_hai_luo_bing_xun_desc:0 "暴力血腥的谋杀皇帝与工人真正的“救世主”，斧头帮的领袖王亚樵脱颖而出，他的带领我们走上一条不同的道路，我们依旧暴力，但是我们的一切行动都是为了一个更加光明的未来！"
  LEC_ally_zuolian_minor_triads:0 "同左联和工团党结盟"
  LEC_ally_zuolian_minor_triads_desc:0 "长期以来王亚樵都和上海的工团党人们保持着一种暧昧的若近若远的态度，如今他们终于可以抛弃那些虚伪的假情假意，坦诚相见了。尽管王亚樵公开申明自己不会加入中国工团党，但是在上海城的未来将会有这些狂想家的一席之地。"
@@ -2560,6 +2578,57 @@
  legcities.216.d:0 "乔•法伦，原名约瑟夫•波拉克，父母是流亡到奥地利的东欧犹太人。年幼的约瑟夫在贫民窟里度过了童年，直到第一次世界大战，奔溃的奥地利经济使得本就贫困的波拉克家族更加雪上加霜，小约瑟夫长期营养不良，想要进血汗工厂或者奥地利黑帮都不合格。直到有一天，他巧合般的溜入了维恩莱蒙德剧院，他被歌舞表演吸引，自学了舞蹈，伪造了身份，靠在舞池中为那些新崛起的资产阶级夫人们伴舞赚钱。\n\n在1924年，一个名为午夜快乐时光的歌舞团向约瑟夫发来了邀请，他们从奥地利出发一路向远东地区。在舞团中，约瑟夫认识了一队来自俄罗斯的姐妹，他很快被姐姐内莉吸引无可自拔，他改名称自己为乔•法伦，内莉也冠上了夫姓。他们逃离了那个吃人的地方。\n\n从新加坡到天津，从天津到北京，最后是上海，这座繁华的城市，吸引着每一个想要发家致富的“赌徒”。这其中就包括了决定脱离舞台留在这里的法伦夫妇，最初的日子当然很苦，但凭借着出色的能力和狡诈的头脑，乔从地下世界冲上了云霄甚至加入了龙头联合，分到了自己的一小块“领土”。\n\n故事如果在这里结束那将是一个美妙的爱情故事，可惜乔是个情场浪子，虽然从前他不会对除内莉外的人上心。但是万事皆有意外，他遇到了一位名叫拉瑞莎•安德森的贫穷姑娘。她遇到他的那天，穿着自己缝制的衣服，穿破洞的鞋子，但乔一眼就沉沦了下去。太像了，她甚至是太像年轻的内莉，她们甚至都是白俄人。内莉从前也不会对乔的花心感到不快，除了这一次，她知道乔一定会会无可救药的爱上拉瑞莎，就像从前爱上自己那样。于是在某个夜晚，在乔外出的时候，内莉给了拉瑞莎一张船票，让她永远不要回来。而当乔发现之后他勃然暴怒，和内莉大吵了一架，甚至还动了手，在那个夜晚，内莉去了码头，再也没有回来过..."
  legcities.216.a:0 "女人只会影响你赚钱的速度"
 
+
+ LEC_jiu_zou_chong_lai_xiang_yi_tong:0 "九州从来向一统"
+ LEC_jiu_zou_chong_lai_xiang_yi_tong_desc:0 "九州从来向一统，烽燧却在城头裂作十二道伤痕每道裂口都长出新旗，青天白日被硝烟熏成灰黄。破碎的瓷器在当铺深处发烫，景德镇的窑工数着裂纹，用祖传的釉料修补缺口，北平书生的报纸沾着江南梅雨，洇开的墨迹在版图上，勾连成模糊的经络。租界的自鸣钟敲碎黄昏，黄包车夫拉着半部残破的春秋，碾过梧桐叶拼凑的地界，江轮拉响汽笛时，有人听见青铜编钟的呜咽，在扬子江底闷声震荡。上海滩的霓虹割裂夜空，暗巷里的留声机卡着杂音，反复唱那句"山河奄有中华地"，穿长衫的账房先生，在算盘珠间寻找遗失的经纬线，却拨出满手血泡。南方的演讲者喉结滚动，每粒唾沫星子都裹着铁，工厂的汽笛突然嘶鸣，惊起梧桐树上沉睡的凤凰，铸铁车间里，千吨钢水正等待浇铸，某种比长城更沉重的形状。"
+
+ LEC_zhu_ming_zhen_long_tian_zi:0 "真龙天子"
+ LEC_zhu_ming_zhen_long_tian_zi_desc:0 " "
+ LEC_chong_qi_feng_fan_zhi:0 "重启封藩制"
+ LEC_chong_qi_feng_fan_zhi_desc:0 " "
+ LEC_bu_fu_tai_zu_zhi_ming:0 "千古一帝"
+ LEC_bu_fu_tai_zu_zhi_ming_desc:0 "此前世人皆知秦始皇乃千古第一帝，但如今在朱元璋附身延恩侯后大明重开，百姓安居乐业，百官忠贞不二，比之秦始皇有过之而无不及，乃真正的千古第一帝！"
+
+ LEC_jiao_hua_zhi_guo:0 "教化之国"
+ LEC_jiao_hua_zhi_guo_desc:0 " "
+ LEC_ru_fa_ge_ming:0 "儒法革命"
+ LEC_ru_fa_ge_ming_desc:0 " "
+ LEC_steep_legacy_or_smth:0 "重整武德"
+ LEC_steep_legacy_or_smth_desc:0 " "
+
+ LEC_di_wang_ban_de_zong_tong:0 "帝王般的总统"
+ LEC_di_wang_ban_de_zong_tong_desc:0 " "
+ LEC_cai_fu_xian_e:0 "财富限额"
+ LEC_cai_fu_xian_e_desc:0 " "
+ LEC_bao_li_er_xue_xing:0 "无分黑白，是钱皆可"
+ LEC_bao_li_er_xue_xing_desc:0 "这个世界上唯有金钱是最重要的，没有金钱我们什么也不是，因此只要是能够赚钱的事情，我们都干..."
+
+ LEC_wen_he_ge_ming_dao_lu:0 "温和革命道路"
+ LEC_wen_he_ge_ming_dao_lu_desc:0 " "
+ LEC_fu_xu_ping_kong_zhi_ren:0 "国家救济处"
+ LEC_fu_xu_ping_kong_zhi_ren_desc:0 " "
+ LEC_xian_zheng_zhi_zhi:0 "宪政之治"
+ LEC_xian_zheng_zhi_zhi_desc:0 "先总理在的三段论是最符合中国实际的，但是我们所需要的是缩短军治时期，军治阶段会导致一个个军阀头目的崛起。我们的共和国更需要的是一本完善的宪法，来达到真正的宪制阶段的目的。"
+
+ LEC_gong_ren_bu_zai_wei_nu:0 "工人不再为奴"
+ LEC_gong_ren_bu_zai_wei_nu_desc:0 "此前的中国工人如奴隶一般受人欺压，毫无尊严，如今我们将扭转这一情况，工人的权力将得到拓展。他们创造了这个世界，也将拥有这个世界。劳工的神圣将不侵犯。"
+ LEC_tong_zuo_yi_zhi_ren_bing_xing:0 "同工团并行"
+ LEC_tong_zuo_yi_zhi_ren_bing_xing_desc:0 "在上海时期，上海总工会就是我们的盟友，如今我们也将和中国工团党携手并进，再造劳工的中华。我们将一同为无产阶级的伟大复兴而战斗。"
+ LEC_zi_you_ren_de_lian_he:0 "自由人的联合"
+ LEC_zi_you_ren_de_lian_he_desc:0 " "
+
+ LEC_ren_ren_jie_di_wang:0 "人人皆帝王"
+ LEC_ren_ren_jie_di_wang_desc:0 "在这个世界上一切以帝王为中心的帝国终将瓦解，一切以资本为核心的企业也都将崩溃，只有人民的帝国得以长存。帝王们凭借血脉的传承宣称自己超凡脱俗，而人民将告诉他们是谁将他们捧上了皇位，也是谁才真正的该被称为帝王。"
+ LEC_wu_zheng_fu_zhu_yi_gai_zao:0 "无政府主义改造"
+ LEC_wu_zheng_fu_zhu_yi_gai_zao_desc:0 " "
+ LEC_chui_hui_yi_qie:0 "烧毁银行，砸烂钱庄"
+ LEC_chui_hui_yi_qie_desc:0 " "
+ LEC_ci_she_li_ming:0 "赤色黎明"
+ LEC_ci_she_li_ming_desc:0 " "
+
+ YUN_end_of_da_chaos:0 "中华永恒"
+ YUN_end_of_da_chaos_desc:0 " "
+
 #大明
  LEC_syndicalist_party_WYQ:0 "中国工团党"
  LEC_syndicalist_party_WYQ_long:0 "中国总工会(China Federation of Trade Unions)"
@@ -2568,21 +2637,9 @@
  LEC_social_democrat_party_WYQ:0 "明王朝"
  LEC_social_democrat_party_WYQ_long:0 "奶明皇室"
 
- LEC_da_ming_back:0 "§H旧日王朝已然东山再起§!"
  LEC_he_is_back:0 "§H王者归来§!"
- LEC_long_tou_control:0 "§H龙头们的掌控将持续§!"
  LEC_over_old:0 "§H旧日时光将一去不复返§!"
 
- LEC_bu_mu_zi_wei:0 "不怒自威"
- LEC_ren_ming:0 "为人民而战"
- LEC_national_rebirth_idea:0 "国家重生"
- LEC_national_rebirth_idea_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。"
- LEC_national_rebirth_ideaQ:0 "国家重生"
- LEC_national_rebirth_ideaQ_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将为他的人民而战。"
- LEC_national_rebirth_ideaB:0 "国家重生"
- LEC_national_rebirth_ideaB_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将在一位真正的领导人的手中重新绽放他的伟大。"
- LEC_national_rebirth_idea2:0 "国家重生"
- LEC_national_rebirth_idea2_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。大明浴火重生，这个精神上不朽的帝国将他的开创者的带领下重建过去的辉煌。"
  LEC_huang_quan_wen_gu:0 "皇权稳固"
  LEC_te_xu_jin_yin:0 "特许经营"
  LEC_guerilla_mob:0 "异姓王"
@@ -2607,8 +2664,6 @@
  LEC_di_guo_de_shi_kiang_desc:0 "烟草作为一种价值连城的农作物，是我们这个落后的农业国家最好的出口产品，在这个纷杂的时代里，自然是值得我们大力投资的。"
  LEC_te_xu_jing_ying:0 "特许经营"
  LEC_te_xu_jing_ying_desc:0 "军工、交通、能源...所有的行业都将被我们垄断。但是我们并不是那般绝情的人，一部分的企业将被交给那些忠于我们的商人们，这是他们应有的报酬。"
- LEC_bao_li_er_xue_xing:0 "无分黑白，是钱皆可"
- LEC_bao_li_er_xue_xing_desc:0 "这个世界上唯有金钱是最重要的，没有金钱我们什么也不是，因此只要是能够赚钱的事情，我们都干..."
 
  LEC_ban_ju_ru_ban_hu:0 "伴君如伴虎"
  LEC_ban_ju_ru_ban_hu_desc:0 "君王是威严的，不苟言笑的，他们的胸中只有江山与百姓，只要江山稳固，百姓安居乐业就足够了，个人的名声是不重要的。但是臣子却不同，他们永远想着去经营，去揣摩上意，永远不会脚踏实地的去造福百姓。因此帝王才要风雨骤变，上一刻喜笑颜开，下一刻便要废黜杀人。这都是为了江山，为了百姓。"
@@ -2616,15 +2671,7 @@
  LEC_huang_quan_bu_rong_you_shi_desc:0 "千百年来，多少帝国的奔溃便是始于皇权的动摇，宵小之辈们闻风而动，帝国的根基毁于一旦。因此，任何胆敢觊觎动摇皇权之人都当处死，唯有维护皇权的尊严才能够维护国家的稳固。"
  LEC_qing_shao_bu_zhong_zhi_cheng:0 "清洗不忠之臣"
  LEC_qing_shao_bu_zhong_zhi_cheng_desc:0 "自大明光复以来，不知有多少奸佞浑水摸鱼混入朝堂。如今天下已定，当剪除凶患，再启重典，杀一儆百，以防止这些吃人的家伙再伤及百姓，祸乱朝纲。"
- LEC_bu_fu_tai_zu_zhi_ming:0 "千古一帝"
- LEC_bu_fu_tai_zu_zhi_ming_desc:0 "此前世人皆知秦始皇乃千古第一帝，但如今在朱元璋附身延恩侯后大明重开，百姓安居乐业，百官忠贞不二，比之秦始皇有过之而无不及，乃真正的千古第一帝！"
 
- LEC_ren_ren_jie_di_wang:0 "人人皆帝王"
- LEC_ren_ren_jie_di_wang_desc:0 "在这个世界上一切以帝王为中心的帝国终将瓦解，一切以资本为核心的企业也都将崩溃，只有人民的帝国得以长存。帝王们凭借血脉的传承宣称自己超凡脱俗，而人民将告诉他们是谁将他们捧上了皇位，也是谁才真正的该被称为帝王。"
- LEC_gng_ren_bu_zai_wei_nu:0 "工人不再为奴"
- LEC_gng_ren_bu_zai_wei_nu_desc:0 "此前的中国工人如奴隶一般受人欺压，毫无尊严，如今我们将扭转这一情况，工人的权力将得到拓展。他们创造了这个世界，也将拥有这个世界。劳工的神圣将不侵犯。"
- LEC_tong_zuo_yi_zhi_ren_bing_xing:0 "同工团并行"
- LEC_tong_zuo_yi_zhi_ren_bing_xing_desc:0 "在上海时期，上海总工会就是我们的盟友，如今我们也将和中国工团党携手并进，再造劳工的中华。我们将一同为无产阶级的伟大复兴而战斗。"
  LEC_zi_you_de_wu_tuo_bang:0 "自由的乌托邦"
  LEC_zi_you_de_wu_tuo_bang_desc:0 "革命改革已初具成效，和平和繁荣正张开双臂，迎接自由解放的无产阶级。我们身上的枷锁已经脱落，未来从未如此光明，但是光明还没完全将临，一切的奋斗都还需要再进行，无产阶级的真正解放还需要我们的努力！"
  
@@ -2635,8 +2682,6 @@
 
  LEC_qing_xi_jiu_ri_zhi_e:0 "清洗旧日之恶"
  LEC_qing_xi_jiu_ri_zhi_e_desc:0 "为了帝国的复兴，我们曾犯下了些许罪恶，但如今帝国已然重现，那些罪孽行径已无法被容忍，我们必须彻底与曾经诀别。"
- LEC_fu_xu_ping_kong_zhi_ren:0 "抚恤贫困之人"
- LEC_fu_xu_ping_kong_zhi_ren_desc:0 "帝国不会抛弃任何一位子民，凡因外力而贫困之人都将得到抚恤，帝国不会就此抛弃他们。"
  
  LEC_di_gup_yong_heng:0 "帝国永恒"
  LEC_di_gup_yong_heng_desc:0 "1644年，大明迎来了第一次灭亡，而在现在大明迎来了他的重生。悲观者或许还会担忧大明将迎来第二次覆灭，但是只有我们知晓当帝国卷土重来之后，他只会攀上更高的山峰，我们也只会带领着帝国人民完成更为宏大的成就！"
