--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -2219,3 +2219,6 @@
  YUN_tradgey_strikes_the_empire_desc:0 "春秋乱战逐渐落下帷幕，我高祖却殒命于往常的烟雾幻梦之中。皇室宗亲却号称地方“刺史”要密谋篡权，破坏国家来之不易的和平，于是以维护稳定为由，竞相争夺起了权柄。若是没人继承大统，恐怕我们新近统一的帝国再度分裂也只是时间问题。"
  YUN_end_of_da_chaos:0 "护天国之安宁"
  YUN_end_of_da_chaos_desc:0 "历经多年军阀混战之后，我帝国依旧屹立不倒，在过去几年里，新的领导层得以确立，内部事务也处理完毕，和平安宁之感终于再度降临我国土地。无论我等君王及其宫廷将引领我们走向何方，当帝国向雄立于世界之目标大步迈进时，我国人民都将纵享天国之安乐。"
+
+ YUN_steep_attack:0 "现代战争"
+ YUN_welfare:0 "国家救济处"
