--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -7,7 +7,18 @@
  red_army_right: "§a红军§!"
  nong_ming_right: "§R农民派§!"
 
+ LEC_bu_mu_zi_wei: "不怒自威"
+ LEC_ren_ming: "为人民而战"
  GXC_really_kaiser: "中华的凯撒\n§g其人身负普鲁士铁血传统与东方天命观之双重血脉，乃是万王之王，龙与鹰之主，一切的统治者，德意志的威廉三世，中华的威廉一世！§!"
+ HNN_shen_pan_zhe: "裁决者"
+ HNN_tian_gou: "天狗"
+ HNN_tian_cai: "无产阶级的天才"
+ HNN_ge_ming_zong_si_ling: "伟大领袖"
+ HNN_jiao_yuan: "教员"
+ HNN_ge_ming_ji: "革命家"
+ HNN_ge_ming_de_shou_hu_zhe: "革命的守护者"
+ HNN_fu_jia_weng: "富家翁\n§g他拥有万贯家财，虽然没有人能说得清这些钱到底是怎么来的。§!"
+ HNN_zong_she_ji_shi: "总设计师\n§g邓小平主席是中国革命的总设计师，邓小平所设计的‘中国式的社会主义’”将把中国变为强国，他是中华儿女的领路人。§!"
 
  rising_star: "明日之星"
  rising_star_desc: "§L这名军官在军事战术和大战略上展现出巨大的潜力。§!"
@@ -23,13 +34,15 @@
  SQI_yue_dui: "姆吉卡"
  SQI_yue_dui_desc: "§L这位领导人乃是女人中的女人，乐手中的乐手，女桐中的支配者，乐队中的统治者。§!"
  GXC_tie_xue: "铁血"
- GXC_tie_xue_desc: "§L这位舰娘来自一个名为铁血的国家。§!"
+ GXC_tie_xue_desc: "§L德意志的科学技术世界第一！§!"
  cruiser: "巡洋舰"
- cruiser_desc: "§L坚船利炮，用最大口径的火炮装填最大当量的舰炮，只需要一炮就足以歼灭任何胆敢拦在前方的敌人。§!"
- Zerstörer: "驱逐舰"
- Zerstörer_desc: "§L她身披月华银甲游弋于潮汐之间，流线脊背轻划碧波惊起白练，深海之眼始终凝望星垂平野。当风暴在雷达神经末梢跃动时，导弹阵列如竖琴般震颤着死神韵律，鱼雷舱内蛰伏着深海的雷鸣。时而如孤傲浪人独行于惊涛裂岸，电子脉络吞吐着无形烽火；时而化身骑士统领铁甲洪流，穹苍之下以光锥为剑镌刻守护的铭文。暗夜巡航时舷侧垂落的波纹，恰似她抚过海面未及收敛的锋芒。§!"
+ cruiser_desc: "§L她以液态白银浇筑的曲线切割暮色，流线型甲板是凝固的浪涌，侧舷的垂发单元如紫水晶袖箭藏于丝绸褶皱。当相控阵瞳孔在晨昏线扫描天穹裂痕，远程导弹已在她锁骨凹槽孵化成群星之卵。主炮齐射时裙摆扬起燃烧的汞雾，127毫米韵律将海平线谱成渐强颤音。\n\n青铜螺旋桨搅动深蓝珐琅，航迹是写在浪尖的十四行诗，近防炮旋转的瞬间发髻散落钨芯暴雨。夜色巡航时她将雷达波织成蕾丝披肩，声呐阵列垂落的银链探测着深渊耳语。总在舰队锋矢与温柔后卫间起舞，用燃汽轮机的心跳校准潮汐节拍——那些被电磁脉冲灼伤的云层，都是她褪下的旧时代鲸骨束腰，而新淬火的舰艏仍在用穹甲上的蚀痕撰写海权叙事的新章。§!"
+ Destroyer: "驱逐舰"
+ Destroyer_desc: "§L她身披月华银甲游弋于潮汐之间，流线脊背轻划碧波惊起白练，深海之眼始终凝望星垂平野。当风暴在雷达神经末梢跃动时，导弹阵列如竖琴般震颤着死神韵律，鱼雷舱内蛰伏着深海的雷鸣。时而如孤傲浪人独行于惊涛裂岸，电子脉络吞吐着无形烽火；时而化身骑士统领铁甲洪流，穹苍之下以光锥为剑镌刻守护的铭文。暗夜巡航时舷侧垂落的波纹，恰似她抚过海面未及收敛的锋芒。§!"
  Battleship: "战列舰"
- Battleship_desc: "§L她是海上的霸主，是凌驾于一切战舰之上的真正王者。§!"
+ Battleship_desc: "§L她自熔岩与月相交媾的深渊苏醒，钢铁裙裾缀满铆钉铸就的星群。三联装炮塔垂落如神殿裙裾，当齐射的火流星刺透暮色织就猩红绸缎，十二重后坐力便在她锁骨刻下海浪图腾。吃水线下的装甲带是凝固的熔岩腰封，每寸钢板褶皱里都蜷缩着百年惊雷的胚胎。蒸汽心脏在肋间蒸腾起永不消散的硝烟云鬓，瞭望塔的鎏金目镜仍倒映着被弹道解构的晨昏线。当现代海风蚀穿她缀满勋章的肋拱，蛰伏在锈色港湾的钢铁女神仍会在暴风雨中昂首，让褪色的火控雷达重新吮吸雷电——此刻所有破碎的浪都朝着她跪伏，钢铁长裙盛放成不灭的怒涛，而沉没的日轮正从她炮管中娩出新世纪的潮涌。§!"
+ qian_ting: "潜艇"
+ qian_ting_desc: "§L她沉入亘古幽蓝的血脉，钢铁骨骼溶解于海之褶皱，呼吸与洋流共振成静默的经文。当鱼雷舱舒展暗潮中磨砺的冰棱，声呐触须已在漆黑幕布上刺绣致命航迹。上浮时脊背撕开月光如新生岛礁，下潜刹那所有星辰都被压进海神的肋骨之间。压力表盘跳动着深渊心跳，潜望镜收藏着人间灯火酿成的毒酒。她是永远背对太阳的深渊凝视者，用钢铁鲸歌在液态虚空书写——那些被抹去坐标的史诗，总在波涛之下先于黎明抵达战场。§!"
  hang_mu: "航母"
  hang_mu_desc: "§L她们的出现彻底改变了海战，大炮的时代结束了...§!"
  tun_shi: "吞噬之漩"
