--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2328,15 +2328,18 @@
  LEC_TRIAD_KMT_RED_3:0 "中华民国"
  LEC_TRIAD_KMT_RED_3_ADJ:0 "中国"
  LEC_TRIAD_KMT_RED_3_DEF:0 "中华民国"
- LEC_TRIAD_CHINA:0 "中华帝国"
- LEC_TRIAD_CHINA_ADJ:0 "中华帝国"
- LEC_TRIAD_CHINA_DEF:0 "中华帝国"
  LEC_FREE:0 "中华自由地区"
  LEC_FREE_ADJ:0 "中华自由地区"
  LEC_FREE_DEF:0 "中华自由地区"
  LEC_SZC_FREE:0 "四川自由地区"
  LEC_SZC_FREE_ADJ:0 "四川自由地区"
  LEC_SZC_FREE_DEF:0 "四川自由地区"
+ LEC_SHC_FREE:0 "上海自由市"
+ LEC_SHC_FREE_ADJ:0 "上海自由市"
+ LEC_SHC_FREE_DEF:0 "上海自由市"
+ LEC_HNN_FREE:0 "湖南自由地区"
+ LEC_HNN_FREE_ADJ:0 "湖南自由地区"
+ LEC_HNN_FREE_DEF:0 "湖南自由地区"
 
  LEC_du_yue_sheng: "杜月笙"
  LEC_Huang_Jinrong: "黄金荣"
@@ -2394,6 +2397,8 @@
  LEC_Xudatong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1909年\n大清帝国 浙江省宁波镇海县\n§Y派系：§!§g桓社§!"
  LEC_ye_chao_shan: "叶焯山"
  LEC_ye_chao_shan_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n大清帝国 上海特别市\n§Y派系：§!§g桓社§!\n§Y军旅生涯：§!§g叶焯山，小名阿根，因早年在美国驻沪领事馆开汽车，外号“花旗阿根”。是青帮头子、“长江一虎”王德龄的门徒，与金廷荪是“同参兄弟”。后为杜月笙心腹。与高鑫宝、顾嘉棠、芮庆荣合称杜门“四大金刚”。§!"
+ LEC_Wan_Mo_lin: "万墨林"
+ LEC_Wan_Mo_lin_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1898年8月21日年\n大清帝国 上海特别市\n§Y派系：§!§g桓社§!\n§Y军旅生涯：§!§g万墨林，原名木林，被称作是“杜门第一红人”，杜月笙的姑表弟、门生，早年为杜抽大烟时为杜烟管填阿芙蓉，得到杜之信任，最后为杜事业管账、掌柜，记忆力佳，为杜月笙事业熟记190组电话号码。§!"
  LEC_gu_jia_tang: "顾嘉棠"
  LEC_gu_jia_tang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n大清帝国 上海特别市\n§Y派系：§!§g桓社§!\n§Y军旅生涯：§!§g顾嘉棠，杜月笙旗下头号打手，其四大金刚之首。早年间在上海滩做花匠，在一次赌博中被巡警逮捕，顾嘉棠不服与巡警扭打起来，在纠纷期间巡警的手枪走火击中大腿，顾嘉棠由此入狱半年，同时也因其顶撞巡警而在道上走响名声。顾嘉棠拜王德龄为老头子，青帮“通”字辈。顾嘉棠与杜月笙的认识同样相当早，早在杜月笙还在街头当小混混时二人便相识。杜月笙拜在黄金荣旗下时，顾嘉棠被黄金荣安排在杜月笙手下干事，从此顾嘉棠就跟着杜月笙身边为其鞍前马后。桓社在上海的几家负责毒品走私的企业，三鑫公司、港记公司的名义所有者和经营者便是顾嘉棠。§!"
  LEC_Heung_Chin: "向前"
@@ -2421,6 +2426,8 @@
  LEC_SHANG_EMPIRE_back:0 "§Y我们选择了扶持孔子后裔§!\n"
  LEC_da_ming_back:0 "§H旧日王朝已然东山再起§!"
  LEC_long_tou_control:0 "§H龙头们的掌控将持续§!"
+
+ autonomous_free_puppet:0 "自由地区"
 
  LEC_Opium_Idea1:0 "鸦片贸易"
  LEC_Opium_Idea3:0 "鸦片贸易"
@@ -2451,14 +2458,12 @@
  LEC_abolition_of_money_shock:0 "烧毁银行，砸烂钱庄"
  LEC_a_new_man:0 "新一代"
  LEC_tanglarp_code:0 "儒法革命"
+ LEC_red_deal:0 "捍卫工人权力"
  LEC_national_rebirth_idea:0 "国家重生"
  LEC_national_rebirth_idea_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。"
- LEC_national_rebirth_ideaQ:0 "国家重生"
- LEC_national_rebirth_ideaQ_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将为他的人民而战。"
- LEC_national_rebirth_ideaB:0 "国家重生"
- LEC_national_rebirth_ideaB_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。这个帝国将在一位真正的领导人的手中重新绽放他的伟大。"
  LEC_national_rebirth_idea2:0 "国家重生"
  LEC_national_rebirth_idea2_desc:0 "一个重生的国家，一个展望未来的同时又尊重过去的国家。大明浴火重生，这个精神上不朽的帝国将他的开创者的带领下重建过去的辉煌。"
+  LEC_te_xu_jin_yin:0 "特许经营"
  LEC_wealth_cap:0 "财富限额"
  LEC_wealth_cap_desc:0 "你知道的，没有人能富过我们的龙头。"
  
@@ -2656,6 +2661,12 @@
  legcities.216.t:0 "情场“高手”"
  legcities.216.d:0 "乔•法伦，原名约瑟夫•波拉克，父母是流亡到奥地利的东欧犹太人。年幼的约瑟夫在贫民窟里度过了童年，直到第一次世界大战，奔溃的奥地利经济使得本就贫困的波拉克家族更加雪上加霜，小约瑟夫长期营养不良，想要进血汗工厂或者奥地利黑帮都不合格。直到有一天，他巧合般的溜入了维恩莱蒙德剧院，他被歌舞表演吸引，自学了舞蹈，伪造了身份，靠在舞池中为那些新崛起的资产阶级夫人们伴舞赚钱。\n\n在1924年，一个名为午夜快乐时光的歌舞团向约瑟夫发来了邀请，他们从奥地利出发一路向远东地区。在舞团中，约瑟夫认识了一队来自俄罗斯的姐妹，他很快被姐姐内莉吸引无可自拔，他改名称自己为乔•法伦，内莉也冠上了夫姓。他们逃离了那个吃人的地方。\n\n从新加坡到天津，从天津到北京，最后是上海，这座繁华的城市，吸引着每一个想要发家致富的“赌徒”。这其中就包括了决定脱离舞台留在这里的法伦夫妇，最初的日子当然很苦，但凭借着出色的能力和狡诈的头脑，乔从地下世界冲上了云霄甚至加入了龙头联合，分到了自己的一小块“领土”。\n\n故事如果在这里结束那将是一个美妙的爱情故事，可惜乔是个情场浪子，虽然从前他不会对除内莉外的人上心。但是万事皆有意外，他遇到了一位名叫拉瑞莎•安德森的贫穷姑娘。她遇到他的那天，穿着自己缝制的衣服，穿破洞的鞋子，但乔一眼就沉沦了下去。太像了，她甚至是太像年轻的内莉，她们甚至都是白俄人。内莉从前也不会对乔的花心感到不快，除了这一次，她知道乔一定会会无可救药的爱上拉瑞莎，就像从前爱上自己那样。于是在某个夜晚，在乔外出的时候，内莉给了拉瑞莎一张船票，让她永远不要回来。而当乔发现之后他勃然暴怒，和内莉大吵了一架，甚至还动了手，在那个夜晚，内莉去了码头，再也没有回来过..."
  legcities.216.a:0 "女人只会影响你赚钱的速度"
+ legcities.217.t:0 "拜门"
+ legcities.217.d:0 "入杜门也得找关系、打交道。先要找和杜有关系、有交情的人向杜说妥，次一步还得托在杜公馆得杜信任的人物关照安排。那时杜宅事务管理万墨林，从高桥乡下的小铜匠、进杜公馆做小当差开始，渐渐通过小心伺候杜月笙而取得信任，熟悉进门拜老头子的手续。早期进杜门拜老头子，万是一关，人们虽然打通了上一层的关系，仍须铺好他这条路。当然，有钱可使鬼推磨，但对他总不免要摸摸清楚，适当安排。初步手续改归恒社办理，再转向杜公馆。\n\n入门当徒弟的程序是：先用红帖子开明自已的祖先三代，并写上“愿拜门下听从训海”的字句，由介绍人和本人具名；然后遵照约定日期备齐礼物，持往杜家行礼。最初要向杜跪拜，后来改为三鞠躬，如有多人同时拜门，可集体鞠躬。行礼后摄影，此外别无节目。由恒社理事会经办手续时期，凡申请入社，由社员二人介绍，填具入社申请书，经理事会通过后，报告理事长核准，定期办理手续，然后由常务理事、总干事等陪同到杜宅行礼。入门应呈送礼物，除自愿另行致送者外，一般改作入社费缴纳。\n\n社里的活动，在初期经常有春秋两季的社员大会，彩排，聚餐，每年七月十五日为杜月笙祝寿送礼。杜家生了小孩，同样须送礼祝贺。举行理事会自属应有文章。集会时期中日常有赌局；大的小的都有，各找对象凑局，由厨房供饭。也有社员叫局带了妓女一同前来，花天酒地，纵情享乐。每逢新年，万墨林利用恒社大赌几天，借此抽头，捞进一笔外快。不少嗜赌的人们来过瘾，取利市，保证不出其他赌场的毛病。后来，渐渐有人觉得这样地放肆，外面沸沸扬扬，口碑太坏，于是在一九三六年，就取消在社吃饭、叫局和赌博，只有票房活动和图书设备，只能饮茶、吃点心。"
+ legcities.217.a:0 "师傅领进门，修行在个人"
+ legcities.218.t:0 "新春"
+ legcities.218.d:0 "每年到夏历十二月二十四日，通商银行的帐房田洪元就给杜月笙预备“红包”两千个，每个两块钱，这是给一般司机、侍役和巡捕等等的，另外，还预备好两百个金“四开”(金币），是给朋友、徒弟们带同前来拜年的小孩们的；还打了五十个金洋钿，这是专给干儿子、千孙子们的。除夕之夜，杜洗好澡，一切准备齐全了，第二天早晨起，就门庭若市，一批批拜年的人纷至沓来，各色人等都有，徒子徒孙们向杜下跪磕头，其余有鞠躬的，有打恭作揖的。大概坐汽车来的，每一汽车连保镖要打发三四个“红包”。发得最多的是巡捕，有时来了四五十人一大队，到门口高喊：“向杜先生恭禧来了！”于是就有人请他们在大门外站好，每人给一个“红包”，发毕，他们喊一声“谢谢杜先生”，就走了。还有一些小流氓地痞，新年也成群来拜年，也是每人给一个“红包”，大概不到年初三，两千个“红包”就发完了，总还要叫田洪元补送八百个来，才能应付得了。\n\n杜自己也要出去拜年，第一处总是先到钧培里黄金荣处，第二处是到他的老头子陈世昌处，其他地方只投一个拜年名片。粗粗一算，他过年的压岁钱每年就要花几万元。"
+ legcities.218.a:0 "用之如泥沙"
 
  lecming.1.t:0 "祭天大典"
  lecming.1.d:0 "凛冬的寒气在玄色天幕下凝结成霜，朱元璋踩着夔龙纹朝靴踏上第一级玉阶时，整座应天府尚在寅时的黑暗中沉睡。七十二级汉白玉台阶蜿蜒向上，每九级便有一尊青铜饕餮纹方鼎吞吐青烟，硫磺与沉檀的气息在鼻腔里凝成冰渣。\n\n礼部尚书的声音穿透重重冕旒："起——驾——"十二串白玉珠在眼前晃出涟漪，他看见自己呼出的白气在珠帘间碎成齑粉。当年混着血与尘的粗麻衣襟，此刻已被十二章纹衮服压得透不过气——日月星辰在肩，山龙华虫在袖，每道金线都勒着万钧之重。重来一次他仍旧感到莫大的不适。\n\n"太牢献——"三头纯色牲畜在祭坛前发出最后的呜咽。朱元璋按住腰间太祖宝剑，剑柄的螭吻吞口硌着掌心。他忽然想起至正四年那个春夜，蜷缩在皇觉寺柴房里的少年僧人，饿得数着瓦缝间漏下的星子。此刻北斗七星正悬在紫金山巅，像七枚银钉将他的天命钉死在苍穹。自己开创的王朝早已覆灭，他从没有过竟然能给再来一次匡扶天下。\n\n燔柴炉窜起的青烟突然被北风撕扯，灰烬如黑蝶扑向玄色冕服。掌礼官捧着苍璧的双手在颤抖，玉器相击声惊醒了应天城的晨钟。第一缕天光刺破云层时，朱元璋正将青铜爵高举过眉，清酒在爵腹晃出细碎的金纹，倒映着三万禁军铁甲上凝结的霜花。\n\n"臣朱元璋，敢用玄牡，昭告皇天后土......"祭文在齿间研磨成铁锈味。跪伏的百官化作绵延百里的青灰色海浪，他们的脊背在五色土上起伏如当年鄱阳湖的波涛。当第九次叩首震响额前玉瑱时，他听见自己枯骨般的指节在白玉地面上叩出空洞回响——就像那夜凤阳城的更梆，一声声数着饿殍。\n\n日晷的铜针将影子刻进丹陛石，朱元璋转身时，十二旒冕冠上的玉藻突然发出碎冰轻撞之声。应天城的轮廓正在晨雾中浮现。他松开攥着祭天玉册的手，羊脂白玉坠地时裂成八瓣。"
@@ -2690,58 +2701,6 @@
  lecming.10.t:0 "王者归来"
  lecming.10.d:0 "但忽然间风雷大作，阵阵惊雷划破天际，小孟尝不由得看着眼前那懦弱不起眼的“延恩侯”身形不断颤抖，白烟不知从何飘起。再一个眨眼，眼前那人突兀的已是换了个模样，眉秀目巨，鼻直唇长，面如满月，须不盈尺，相貌堂堂，身高八尺，眉宇间尽是王霸之气。如有识字懂史之人必然知晓眼前人名讳，那正是开天行道肇纪立极大圣至神仁文义武俊德成功高皇帝的大明洪武帝，重八爷。只见重八爷缓缓睁开双眼，对眼前局势洞若观火，他直勾勾的瞪着小孟尝，缓缓张口，喝到“何人敢行刺本皇！”小孟尝闻言被袭来的王霸之气吓得瘫软在地。重八爷又挥了挥龙袍，“尔等为何不跪？”衷心的，不忠的全部跪下。那些赤胆忠臣不禁流下泪水，汇聚成一方小小的堰塘。\n\n洪武帝随手点了点，叫来一个忠诚的问了问今昔是何年？何人坐了龙椅？那人颤颤巍巍，止不住眼泪的说道“陛下，如今已是[GetYear]年，大明亡国已三百年有余，那建州的蛮子努尔哈赤坐了龙椅...”洪武帝越听越怒，天空中龙吟四作。口中痛骂不肖子孙。他的气息不再掩藏，王者之气直冲云霄，从昆仑墟中顿时飞出九条黄龙在北京城上空盘旋，风雷消退，日月重现，大明的江山将由他这个开创者重塑！"
  lecming.10.a:0 "吾皇万岁万岁万万岁！"
-
-#大明
-
- LEC_he_is_back:0 "§H王者归来§!"
- LEC_over_old:0 "§H旧日时光将一去不复返§!"
-
- LEC_huang_quan_wen_gu:0 "皇权稳固"
- LEC_te_xu_jin_yin:0 "特许经营"
- LEC_guerilla_mob:0 "异姓王"
- LEC_red_deal:0 "捍卫工人权力"
-
- LEC_fan_qing_fu_ming:0 "日月重现"
- LEC_fan_qing_fu_ming_desc:0 "三百年前，崇祯皇帝在煤山自缢，大明王朝在内外交困中走向了灭亡。三百年后，从前的困局加在满清之上，他们内外困顿，而大明的旗帜重新在南京城的上空飘起，大明的子民从异族的统治中解放出来，高举日月旗，重造旧山河。"
- LEC_he_bing_ge_lao_hui:0 "再合并哥老会"
- LEC_he_bing_ge_lao_hui_desc:0 "哥老会是川渝湘地区的地下社会统治者，他们和青帮同属于洪门所分化出来的一部分。同属一家，尽管过去双方有着不少矛盾，但如今，反清复明的口号已经重新响起，不和的兄弟也需要放下旧日的恩怨，握手言和，同仇敌忾。大敌当前，同室操戈，亲者痛，仇者快。"
- LEC_xie_gei_bei_fang:0 "写给北方的密信"
- LEC_xie_gei_bei_fang_desc:0 "在反对满清政府的当下，无论我们和北方的张作霖有多少矛盾，我们都可以尝试合作，哪怕他们只是口头表达他们只会在一边看着我们的战争，也能接受。"
- LEC_he_bing_zhi_gong_tang:0 "与致公堂的联系"
- LEC_he_bing_zhi_gong_tang_desc:0 "作为洪门的另一个分支，在下南洋时代他们一路跨越大洋分散在世界各处，其中最大的一个堂口自然是美国致公堂。国民党那帮人中还有两广的陈炯明都有着致公堂的背景，红花绿叶白莲藕，三家本身是一家，何分彼此？"
- LEC_san_bai_nian_de_yuan_jing:0 "三百年的愿景"
- LEC_san_bai_nian_de_yuan_jing_desc:0 "三百年前，满清的皇帝在天坛告祭他们满人的祖先宣高着大明的覆灭与满清的成立。三百年后，洪武二世在龙头们的陪同下祭拜列祖列宗，告慰天地神仙，汉人的皇帝重新回到了他的龙椅之上。汉人们重新迎回了一位真正的天子。他将带领我们走向一次又一次胜利，大明的旗帜重新飘摇。"
- LEC_xi_xi_rang_rang:0 "熙熙攘攘，皆为利往"
- LEC_xi_xi_rang_rang_desc:0 "天下熙熙，皆为利往；天下攘攘，皆为利来。尽管天下尚未一统，各地抵抗势力也没有完全铲除，但是各位龙头还有那位被当作门面的“皇帝”大人都在朝堂之下不断的勾连着。这个天下需要一个话事人，但是究竟是谁来掌控一切还犹未可知..."
-
- LEC_zhen_long_tian_zi:0 "真龙天子"
- LEC_zhen_long_tian_zi_desc:0 "那个所谓的延恩侯不过是一个不值一提的骗子，是满清遗留下来蒙骗世人荒野村夫，完全不是我们伟大的大明王朝的血脉。真正的真龙天子唯有此刻身处御座之人，也唯有他能带来大明的伟大复兴。"
- LEC_di_guo_de_shi_kiang:0 "帝国的食粮"
- LEC_di_guo_de_shi_kiang_desc:0 "烟草作为一种价值连城的农作物，是我们这个落后的农业国家最好的出口产品，在这个纷杂的时代里，自然是值得我们大力投资的。"
- LEC_te_xu_jing_ying:0 "特许经营"
- LEC_te_xu_jing_ying_desc:0 "军工、交通、能源...所有的行业都将被我们垄断。但是我们并不是那般绝情的人，一部分的企业将被交给那些忠于我们的商人们，这是他们应有的报酬。"
-
- LEC_ban_ju_ru_ban_hu:0 "伴君如伴虎"
- LEC_ban_ju_ru_ban_hu_desc:0 "君王是威严的，不苟言笑的，他们的胸中只有江山与百姓，只要江山稳固，百姓安居乐业就足够了，个人的名声是不重要的。但是臣子却不同，他们永远想着去经营，去揣摩上意，永远不会脚踏实地的去造福百姓。因此帝王才要风雨骤变，上一刻喜笑颜开，下一刻便要废黜杀人。这都是为了江山，为了百姓。"
- LEC_huang_quan_bu_rong_you_shi:0 "皇权不容有失"
- LEC_huang_quan_bu_rong_you_shi_desc:0 "千百年来，多少帝国的奔溃便是始于皇权的动摇，宵小之辈们闻风而动，帝国的根基毁于一旦。因此，任何胆敢觊觎动摇皇权之人都当处死，唯有维护皇权的尊严才能够维护国家的稳固。"
- LEC_qing_shao_bu_zhong_zhi_cheng:0 "清洗不忠之臣"
- LEC_qing_shao_bu_zhong_zhi_cheng_desc:0 "自大明光复以来，不知有多少奸佞浑水摸鱼混入朝堂。如今天下已定，当剪除凶患，再启重典，杀一儆百，以防止这些吃人的家伙再伤及百姓，祸乱朝纲。"
-
- LEC_zi_you_de_wu_tuo_bang:0 "自由的乌托邦"
- LEC_zi_you_de_wu_tuo_bang_desc:0 "革命改革已初具成效，和平和繁荣正张开双臂，迎接自由解放的无产阶级。我们身上的枷锁已经脱落，未来从未如此光明，但是光明还没完全将临，一切的奋斗都还需要再进行，无产阶级的真正解放还需要我们的努力！"
- 
- LEC_zhong_cheng_jie_you_feng_shang:0 "忠诚皆有封赏"
- LEC_zhong_cheng_jie_you_feng_shang_desc:0 "腐败之人当诛，忠诚之人当赏，此乃天理，不可违背。凡是忠心耿耿之人都将得到属于他们的报酬。"
- LEC_da_ming_yi_ying:0 "异姓也可封王"
- LEC_da_ming_yi_ying_desc:0 "尽管国之重器不可为他人窥视，但是那些自大明覆灭以来依旧忠于大明之人必当得到属于他们忠诚的赞歌。"
-
- LEC_qing_xi_jiu_ri_zhi_e:0 "清洗旧日之恶"
- LEC_qing_xi_jiu_ri_zhi_e_desc:0 "为了帝国的复兴，我们曾犯下了些许罪恶，但如今帝国已然重现，那些罪孽行径已无法被容忍，我们必须彻底与曾经诀别。"
- 
- LEC_di_gup_yong_heng:0 "帝国永恒"
- LEC_di_gup_yong_heng_desc:0 "1644年，大明迎来了第一次灭亡，而在现在大明迎来了他的重生。悲观者或许还会担忧大明将迎来第二次覆灭，但是只有我们知晓当帝国卷土重来之后，他只会攀上更高的山峰，我们也只会带领着帝国人民完成更为宏大的成就！"
-
  lecming.11.t:0 "清洗奸佞"
  lecming.11.d:0 "太祖爷回到了大明的头等大事除了翻阅典籍骂一骂他的子孙辈们，尤其是趁他一死就“谋逆”的老四外，就是重新高强度处理政事，各部门的所有文件都需要由他查阅。在这其中他发现了后曾经一模一样的现实：贪污横行。这些贪官污吏们已经掘了一次大明的命根，如今他们又想再掘一次，这种事情怎么能被容忍！他的第一道政令就是重启大明律，重启重刑，这一次一切贪官污吏都需要亲眼见证是如何被计算自己的表皮面积。既然他们喜欢贪，喜欢算，那这一次就算个明白！让老百姓检举，让巡抚下去查，全部抓出来！"
  lecming.11.a:0 "忽有巡抚夜执笔..."
@@ -2750,10 +2709,9 @@
  lecming.12.a:0 "还是就此打住"
  lecming.12.b:0 "说点能说的就行了"
  lecming.12.c:0 "让他讲，天塌不下来"
- lecming.13.t:0 "帝国的前路"
- lecming.13.d:0 "如今，帝国已然再次伟大，大明也需要考虑对曾经的朝贡国们做出一个公正的裁决。如朝鲜背叛、越南被德国人窃占，日寇宁顽不化。即便太祖爷曾言四海不征之地，但时局不同，历史文件不具有现实意义，我们更需要的是恢复大明的荣耀。然而多年的战争已经伤尽了百姓，也许我们需要再休养生息几年？"
- lecming.13.a:0 "修民生息"
- lecming.13.b:0 "大明的疆土，寰宇天下！"
- lecming.14.t:0 "拆除清皇陵"
- lecming.14.d:0 "当政局稳定之后，新成立的翰林院肩负起了为如今的“老”皇帝科普大明历史的工作。从宝钞的废止化，从燕王的靖难，到无休止的党政，矿税，再到民变四起，最后是北边的鞑子入关...也会时常去北京城内外看看那些新机械，在那时他心里会默想“要是大明也有这些...”\n\n在又一次结束讲读之后，朱元璋突然提出决定在下一个良辰吉日去南京，去拜一拜自己的陵墓。"
- lecming.14.a:0 " "
+ lecming.13.t:0 "我们的宣言"
+ lecming.13.d:0 "“平等，平等！”一个何等美妙的名词呵！你是几千年来平民的脑筋里唯一的理想，你是许多人渴慕仰望的福音，为了你，为了要求你的实现，我们无数的同胞已牺牲了！他们的幸福，他们的生命，他们的一切了。美国的独立，法俄的革命，这几次惊天动地的伟大事业，哪一次不是为的是你，血战场中河一般流着的腥血，山一般堆积的尸骨，断头台上，绞绳和利刃下股股的血斑，监狱内囚犯的眼泪以及陋巷茅屋中妇人小孩啼饥号寒的哭声，哪一样不是为了你。这许多世纪以来，人们已付出了这样大的代价了！\n\n然而事实上现在的社会却是一个多末不平等的社会啊！一条大的沟把人类分成了两个大的阶级，掠夺者和被掠夺者，有产者和无产者。一些人个人每天的浪费足以养活一千多家的人还有余，另外一些人连每天必需的饮食也难得到。一方面吃的山珍海味，穿的绫罗绸缎，住的高楼大厦，另一方面吃的残汤剩饭，穿的破衣烂鞋，住的茅屋陋巷。一方面穷奢极欲，一方面贫困惨苦。一方面许多的富人全不作工，毫无出产，只靠着他人的劳力而生活，他们享受各种娱乐，花费许多金钱，雇用许多仆人，占据许多房屋，垄断社会财富。另一方面许多的贫民去寻找工作却找不到，他们的家族受着饿，受着冻，受着极大的困苦。有工作的，每天挥着汗来养活家族，因为工作过度，饮食恶劣，到了三四十岁便死去了，留下他的妻子儿女受苦。这是何等的可怕呵！然而还不只此，一阶级的人握着另一阶级的人的生杀之权，可以任意的加以杀戮囚辱，而别一阶级只有匍匐去就死。\n\n“饿死了，冻死了，平民什么权利都被剥尽了，到后来你们只有含泪吞声的哀悼你。们自己的命运，然而那些靠着你们的恩惠而生活着的无耻的富人们却公然在举酒狂饮呢！”我们一读十八世纪末期流行于法国的这首歌曲，谁能不为他们流一掬眼泪呢？然而可痛的是，这正是为我们自己的写照！\n\n翻开一部历史来看罢，那光荣灿烂的记载未尝不冠冕堂皇，然而字里行间，哪一处不是世世代代流离辛苦的平民的血迹。好血腥呀！难道我们竟不能闻着么？我们的祖先的血也已流够了，我们自己的血也已流够了，难道我们儿孙的血还应该继续的流下去么？\n\n我们一样的是血肉的身躯，一样的有天赋的智慧。我们辛辛苦苦地造成了现社会的财富，为什么我们还应该匍匐在一阶级的势力下面，沉沦在贫穷的苦海之中？\n\n“平等！平等！”，从这被苦痛贫穷悲惨等所包围着的穷人的世界中，洪亮的钟声响起来了。"
+ lecming.13.a:0 "“平等！平等！”"
+ lecming.14.t:0 "安徽往事"
+ lecming.14.d:0 "王亚樵与张秋白素来气味不投，在上海时，张秋白见了王亚樵总是避道而走。一天，王亚樵从宝昌路宝康里走出，适遇张秋白从宝昌里口人行道上走来，王亚樵破口大骂举起手杖劈头打去，张秋白一言不发，抱头鼠窜而去，这是朱大刚亲眼所见，他住在上海蒲柏路四六八号时，一个夜里，王亚樵来找他。王亚樵说，你有一百快钱吗？朱说没有，王亚樵说，你去找一找程元斟，好吗？我说，那行，程元斟住在一个外国人开的公寓里。朱大刚去时，他已睡了。“这么晚了，你来有事吗？”他很不自在地问朱大刚。朱大刚告诉他是替王亚樵来找他借钱的。他说：“我身边只有一百元，明天银行不好取钱，留二十元吃饭，拿八十元去怎么样？”朱大刚说，老九（在上海通称王亚樵为老九）的事，多给少给都是光，就这么吧！我回来把钱交给王亚樵，他就匆匆地走了。第三天就听说张秋白在南京被刺死。张那时是安徽建设厅厅长。\n\n那时王亚樵本打算刺杀陈调元，因为陈调元在安徽贪污腐败，搞得民生动荡，但是可以那一次刺杀没有成功，只杀死了张秋白，没有杀掉陈调元，才使得如今陈调元有机会在安徽对南京发起战争。"
+ lecming.14.a:0 "实在是可惜"
