--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -75,6 +75,8 @@
  authdem_chiangism_subtype:0 "蒋中正思想"
  authdem_chiangism_subtype_desc:0 "§Y蒋中正思想§!\n\n所谓蒋中正思想，本质上其实蒋经国使用自己那被党内左右派共同视作革命先烈的父亲蒋中正作为图腾来赋予自的执政正当性，其内容实际上是蒋经国的执政纲领。\n\n为了赋予这种意识形态更多合理性，其纲领吸收了改良主义、三民主义乃至中国传统儒家帝王思想等诸多思想，由于蒋家一直同基督教有联系故也有一些基督教的影子，同时还带有蒋经国法国留学期间所吸收的索雷尔主义烙印等等。\n\n蒋经国的执政纲领以不断的反腐为核心，强调国民党领导的政府和政客的清廉道德，同时比起国民党文官他更注重军人待遇，比起军官他也更注重维持一个民主制度的外表。\n\n在经济上蒋经国主张中华民族复兴不能采取分散的自由市场，必须要采取以大型国有资本主导的国家资本主义来集中力量办大事。而在政治上，以反腐行动为基础，使用软硬皆施的手段，一方面铁拳打击不服从的激进异见分子、一方面吸纳多元政见人士进入国民党内将国民党变成一个包罗万物的大帐篷，从而在维持表面民主的基础上，建立起来蒋经国为首的国民党中央的统治秩序。"
 
+ absolute_monarchy_CN_subtype:0 "绝对君主制"
+ absolute_monarchy_CN_subtype_desc:0 "§Y绝对君主制§!\n\n绝对君主制是指一个国家的君主拥有完全的专制权力的政权。在这种制度下，君主不受议会民主制或国家法律和政府的限制，在领导国家方面发挥着积极的作用，而不是像大多数议会制君主国家那样被降格为单纯的国家象征。绝对君主制在西方并不像以前那样普遍，近代以来，大多数西方君主都成了象征，但君权完全控制国家这种事在西方也不是没有发生过。"
  pataut_yan_xishan_thought_subtype:0 "阎锡山思想"
  pataut_yan_xishan_thought_subtype_desc:0 "§Y阎锡山思想§!\n\n阎锡山思想即指阎锡山本人的政治观念。实际上他有着极大的实用主义乃至投机的色彩，对各种政治思想理论中对自己有用的兼容并收来服务于阎锡山自己或者说国家的存活，他将自己这种思想称为“中的思想”\n\n阎锡山提倡传统主义，推崇儒家思想为中心的封建伦理道德；但是同时又推动进行了废除裹脚陋习、剪发、禁烟等一系列进步行为。同时，阎锡山强调村本政治，认为行政之本在于村庄，大力完善农村的政治体制和经济管理体制，同时又推动大力推动实业和工业化现代化的发展。\n\n阎锡山认为只有军国主义可以救中国，认为军事和军队必须在政治中优先或者主导。同时又强调发展“用民政治”从而调动群众来帮助阎锡山进行统治。用民政治模仿孙文提倡三民，不过不同于孙文带有民主主义倾向。阎锡山强调“民智、民德和民财”，通过发展义务教育普及民智，通过宣传传统文化伦理宣扬民德，通过发展实业和稳定政治发展民财，故阎锡山也提倡推动政治稳定和避免参与军阀混战从而为发展提供良好的环境。\n\n阎锡山还反对党派政治，认为党派政治混乱和和落后的根源，提倡效忠于自己的军人和政客官僚“不入党、不为个人权利用兵、服从中央命令、保卫地方治安”，从而让各位军人和文官专心一意地为自己也就是为国家服务。"
  buddhist_autocrat_subtype:0 "佛教神权统治"
