--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2346,6 +2346,9 @@
  LEC_SHX_FREE:0 "山西自由地区"
  LEC_SHX_FREE_ADJ:0 "山西自由地区"
  LEC_SHX_FREE_DEF:0 "山西自由地区"
+ LEC_ANQ_FREE:0 "安徽自由地区"
+ LEC_ANQ_FREE_ADJ:0 "安徽自由地区"
+ LEC_ANQ_FREE_DEF:0 "安徽自由地区"
 
  LEC_du_yue_sheng: "杜月笙"
  LEC_Huang_Jinrong: "黄金荣"
@@ -2366,6 +2369,8 @@
  LEC_triad_authoritarian_democrat_party_long:0 "兴中学会\n§g作为同盟会元老，杨虎与徐朗西、陈其美这些同样有着洪门背景的大人物深有来往，他自称自己在辛亥革命中立下赫赫功勋，孙中山死后又依靠和国民革命军总司令蒋介石的结义兄弟身份捞到了不少好处，只可惜北伐功亏一篑。杨虎回到上海滩再立山头，从头做起。兴中山又名兴中学会，主要招收上海海员们和前国民党人，在道上也有海员帮，小国民党的叫法。§!"
  LEC_triad_du_yue_sheng_party:0 "恒社"
  LEC_triad_du_yue_sheng_party_long:0 "恒社\n§g恒社创立于1932年，尽管内核依旧是帮会组织，但是批上了一件民众社团的外衣。它的组织规程所标示的宗旨，用了很体面的二十个字，即“进德修业，崇道尚义，互信互助，服务社会，效忠国家”，规定由社员大会选举理监事若干人，推选总干事一人，副总千事一至二人，处理日常社务；下设总务、组织、财务、京剧、交际、职业介绍等组。这仅是表面，实际恒社虽有理监事会，理监事的产生虽具有选举手续，但人选一向由杜月笙事前指定，只在社员大会宣读名单，大家照例举手通过而已。社的权力既不在社员大会，也不在理事会，而在杜月笙个人。一切社务总是先由他作出决定，然后通过理事会或社员大会，作为大家的决定。恒社是杜月笙御用的组织工具。当时的帮会组织披上社团外衣公开活动的，恒社是较早的一个。§!"
+ LEC_triad_huang_jin_rong_party:0 "忠信社"
+ LEC_triad_huang_jin_rong_party_long:0 "忠信社\n§g自杜月笙叛离黄金荣，并在1932年成立恒社后。黄金荣无时无刻不对他怀有恨意，忠信社便是这样的产物，为了搞垮恒社，黄金荣默许自己的门人们组织了忠信社。但是该组织并不像恒社那样公开，哪怕是黄金荣集团内部也只有很少一部分人知道它的存在。§!"
  LEC_triad_paternal_autocrat_party:0 "上海黑帮联合"
  LEC_triad_paternal_autocrat_party_long:0 "龙头会议\n§g上海的清帮、洪门的广州帮、安徽帮、香港的和联胜...全中国有头有脸的黑帮势力云集上海，尽管彼此仍旧未放下过去的仇怨，但是现在，在巨大的利益面前，他们不得不握手言和，至少暂时如此。§!"
  LEC_triad_national_populist_party:0 "黄道会"
@@ -2386,7 +2391,7 @@
 
  LEC_Crime_Bosses: "诸龙头联合"
  LEC_Du_Yuesheng: "杜月笙"
- LEC_Du_Yuesheng_DESC: "杜月笙，本名杜镛，原名杜月生，号月笙，上海浦东人，青帮“悟”字辈。杜月笙早年丧父，由其继母和舅父养育。年少时在水果行当学徒，和当地混混玩在一起，后来出师了又单独摆摊卖水果，因以贩卖莱阳梨出了名，许多人便给他起了一个绰号叫他“莱阳梨”，在那时候他拜青帮陈世昌为老头子（陈世昌是仁社头目张镜湖的弟子），正式入了帮派。三十多岁时杜月笙结识了黄金荣，杜月笙给黄金荣当跟班，深得黄金荣的妻子林桂生欢心，加上会做人，能干事，由此步步高升，由于黄金荣固步自封，还是维持老一套帮会抢钱手法，二人渐行渐远，直到后来二人分家，闹得不欢而散。杜月笙一直想学习水浒中的宋江，常常也接济一些失落文人、政客，被人称为“当代孟尝君”和“小孟尝”。"
+ LEC_Du_Yuesheng_DESC: "杜月笙，本名杜镛，原名杜月生，号月笙，上海浦东人，青帮“悟”字辈。杜月笙早年丧父，由其继母和舅父养育。年少时在水果行当学徒，和当地混混玩在一起，后来出师了又单独摆摊卖水果，因以贩卖莱阳梨出了名，许多人便给他起了一个绰号叫他“莱阳梨”，在那时候他拜青帮陈世昌为老头子（陈世昌是仁社头目张镜湖的弟子），正式入了帮派。三十多岁时杜月笙结识了黄金荣，杜月笙给黄金荣当跟班，深得黄金荣的妻子林桂生欢心，加上会做人，能干事，由此步步高升，由于黄金荣固步自封，还是维持老一套帮会抢钱手法，二人渐行渐远，直到后来二人分家，闹得不欢而散。杜月笙一直想学习水浒中的宋江，常常也接济一些失落文人、政客，被人称为“当代孟尝君”和“小孟尝”。\n\n在上海滩的诸多帮会分子中杜月笙无疑是最成功的那个，借助镇压上海起义的功劳，杜月笙与使馆城市工部会和孙传芳的人搭上了关系，他重金投资工商业并用回报收买政府官员为他所用。如今的他很难再用帮会分子来形容。"
  LEC_Du_Yuesheng_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1888年8月22日\n大清帝国 江苏省苏松太道松江府上海县高昌乡\n§Y派系：§!§g恒社§!\n§Y军旅生涯：§!§g杜月笙，本名杜镛，原名杜月生，号月笙，上海浦东人，青帮“悟”字辈。杜月笙早年丧父，由其继母和舅父养育。年少时在水果行当学徒，和当地混混玩在一起，后来出师了又单独摆摊卖水果，因以贩卖莱阳梨出了名，许多人便给他起了一个绰号叫他“莱阳梨”，在那时候他拜青帮陈世昌为老头子（陈世昌是仁社头目张镜湖的弟子），正式入了帮派。三十多岁时杜月笙结识了黄金荣，杜月笙给黄金荣当跟班，深得黄金荣的妻子林桂生欢心，加上会做人，能干事，由此步步高升，由于黄金荣固步自封，还是维持老一套帮会抢钱手法，二人渐行渐远，直到后来二人分家，闹得不欢而散。§!"
  LEC_Huang_Jinrong: "黄金荣"
  LEC_Huang_Jinrong_DESC: "黄金荣，原名黄锦镛，江苏苏州人，祖籍浙江余姚，自称青帮“通”字辈（实际上完全没拜过老头子），乳名和尚，因为脸上有几颗大麻子，外号“麻皮金荣”。法租界巡捕房探长，贩烟土起家，所收门徒甚众，原来以巡捕房人员及流氓居多，后来发展到工商业者、知识分子及其他方面。1892年，考入上海法租界老北门麦兰巡捕房当探员。1917年破案立功而升至督察长。在杜月笙背叛前是上海滩最大的帮派头目，手握黑白两道。"
@@ -2609,14 +2614,14 @@
  legcities.148.d:0 "张啸林行事素来睚眦必报，其狠辣手段纵在江湖中亦属罕见。昔年其有一爱妾，乃貌美之梨园新秀，只因疑有私情，便将其投喂虎口，此等暴戾行径令沪上闻者皆惊。“大汉奸”张啸林为聚敛财富向来不择手段，纵是亲信门徒稍有忤逆，亦将落得同敌寇一个下场，难逃葬身虎腹之厄。其周旋于东洋势力之间如履薄冰，偏嗜刀尖舔血之快，终日沉湎鸦片云雾难辨虚实。虽对东京主子唯命是从，然其阴鸷心性配合喜怒无常的暴戾之气，沪上诸方势力皆暗自戒惧，唯恐反遭对方报复。"
  legcities.148.a:0 "求饶无用，照样喂虎"
  legcities.152.t:0 "逸园教父"
- legcities.152.d:0 "若论上海滩各路洋人帮派中公认的“头中头”级别人物，那非卡洛斯·加西亚莫属。这位说话和风细雨的墨西哥人把美式意大利黑手党的作风发挥得淋漓尽致，在十里洋场的夜幕下书写着自己的江湖传奇。加西亚早年经营着一家名为“轮盘”的赌场，1929年时赌场遭香港警方查封，其本人也因此获刑两年，关押于臭名昭著的华德路监狱——坊间传言这是英国人眼红赌场收益，连带着觊觎其附带的两处地下赛狗场所致。出狱后，加西亚立刻重操旧业，把墨西哥老家自己酿制的龙舌兰酒，通过上海渠道走私入中、美、加三国，自称是将龙舌兰酒推入亚洲的第一人。\n\n此时正值青帮权力更迭，杜月笙取代黄金荣坐上山主之位。在这位老友的助力下，加西亚用先前所得之利润于法租界内筑成逸园跑狗场，这座跑狗场很快便独占上海此一行业之鳌头。加西亚还豢养一批英国商贾和法国银行家充当“白手套”的角色，替他打理法律文书，把非法生意洗得干干净净。\n\n此后，加西亚行事愈发低调，通过赛狗、拳击、回力球及逸园日进斗金——值得一提的是，逸园还用其亲手走私的龙舌兰酒调制了玛格丽特与帕洛玛鸡尾酒，闻名沪上，而且当年英国人从其手中夺走的两家赛狗场，如今已被逸园逼得破产倒闭，也算是报了一箭之仇。加西亚素来与青帮互惠互利，不过，近来我帮内部的权力更迭让这段合作关系暂时陷入了停滞。虽不及三合会那般树大根深，加西亚也稳坐着上海滩地下世界的一把交椅，不仅于各外籍帮派间斡旋纷争颇有建树，避免了诸多火并惨剧，更是青帮的一大贵客。若能争取此人，无异于平添虎翼，但若与其交恶，必将后患无穷。如今面对杜月笙的这位旧友，我帮是该重修旧好，还是让这位教父彻底退场呢？"
+ legcities.152.d:0 "若论上海滩各路洋人帮派中公认的“头中头”级别人物，那非卡洛斯·加西亚莫属。这位说话和风细雨的墨西哥人把美式意大利黑手党的作风发挥得淋漓尽致，在十里洋场的夜幕下书写着自己的江湖传奇。加西亚早年经营着一家名为“轮盘”的赌场，1929年时赌场遭香港警方查封，其本人也因此获刑两年，关押于臭名昭著的华德路监狱——坊间传言这是英国人眼红赌场收益，连带着觊觎其附带的两处地下赛狗场所致。出狱后，加西亚立刻重操旧业，把墨西哥老家自己酿制的龙舌兰酒，通过上海渠道走私入中、美、加三国，自称是将龙舌兰酒推入亚洲的第一人。\n\n此时正值青帮权力更迭，杜月笙取代黄金荣坐上山主之位。在这位老友的助力下，加西亚用先前所得之利润于法租界内筑成逸园跑狗场，这座跑狗场很快便独占上海此一行业之鳌头。加西亚还豢养一批英国商贾和法国银行家充当“白手套”的角色，替他打理法律文书，把非法生意洗得干干净净。\n\n此后，加西亚行事愈发低调，通过赛狗、拳击、回力球及逸园日进斗金——值得一提的是，逸园还用其亲手走私的龙舌兰酒调制了玛格丽特与帕洛玛鸡尾酒，闻名沪上，而且当年英国人从其手中夺走的两家赛狗场，如今已被逸园逼得破产倒闭，也算是报了一箭之仇。加西亚素来与青帮互惠互利，不过，近来我帮内部的权力更迭让这段合作关系暂时陷入了停滞。虽不及中国帮派那般树大根深，加西亚也稳坐着上海滩地下世界的一把交椅，不仅于各外籍帮派间斡旋纷争颇有建树，避免了诸多火并惨剧，更是青帮的一大贵客。若能争取此人，无异于平添虎翼，但若与其交恶，必将后患无穷。如今面对杜月笙的这位旧友，我帮是该重修旧好，还是让这位教父彻底退场呢？"
  legcities.152.a:0 "延续合作"
  legcities.152.b:0 "让其退场"
  legcities.153.t:0 "上海童子军"
  legcities.153.d:0 "上海童子军作为民族气节与公民责任的丰碑，在册成员有约五十万之众。上海这座城市在亚洲童子军发展史上具有重要意义——1909年英国侨民创立第一龙队，开启了亚洲童子军组织之先河，成了亚洲首个拥有童子军组织的城市。1912年，武昌圣公会牧师颜雅琳创立了中国第一支本土童子军，由此掀起了全国范围的童子军运动热潮。1934年，中国童子军总会于南京正式成立，本应在1937年加入国际童子军组织，却因清政府垮台，政局动荡而暂时搁置。所幸上海分会始终运作如常，如今更主动承担起国际交流的使命，进一步巩固了组织的合法地位。我们的公信力因杰出成员的事迹而愈发坚实。以女童军代表杨惠敏为例，其冒着枪林弹雨为保卫四行仓库的守军输送物资，手中始终高举青天白日旗，以舍生忘死之壮举赢得巾帼英雄之美誉。有杨惠敏这等青年楷模，上海乃至华夏之未来，必能在新一代童子军的守护下安然无虞。"
  legcities.153.a:0 "践行爱国主义的重任，就交给这些童子军了"
  legcities.155.t:0 "犯罪之国民党的旗帜"
- legcities.155.d:0 "历经卓绝斗争，我们恪守孙先生的三民主义大义，打赢无数血战一统华夏，又借暗中滋长的犯罪生意填满了国库。 要想在中国人民心中立下合法政权的招牌，就得打出一面新旗帜，既要包含了国民党之徽记，又要保留三合会之纹章。 我们该选哪一面旗帜呢？"
+ legcities.155.d:0 "历经卓绝斗争，我们恪守孙先生的三民主义大义，打赢无数血战一统华夏，又借暗中滋长的犯罪生意填满了国库。 要想在中国人民心中立下合法政权的招牌，就得打出一面新旗帜，既要包含了国民党之徽记，又要保留洪门符号。 我们该选哪一面旗帜呢？"
  legcities.155.a:0 "选择第一面旗帜"
  legcities.155.b:0 "选择第二面旗帜"
  legcities.155.c:0 "选择第三面旗帜"
