--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1755,6 +1755,12 @@
  LEC_expand_operation_wenzhou:0 "在[803.GetName]扩展帮会活动"
  LEC_Bribe_Officals_wenzhou:0 "贿赂[803.GetName]官员"
  LEC_Establish_wenzhou_Syndicate:0 "建立[803.GetName]财团"
+ LEC_expand_operation_weihaiwei:0 "在[996.GetName]扩展帮会活动"
+ LEC_Bribe_Officals_weihaiwei:0 "贿赂[996.GetName]官员"
+ LEC_Establish_weihaiwei_Syndicate:0 "建立[996.GetName]财团"
+ LEC_expand_operation_liuqiu:0 "在[526.GetName]扩展帮会活动"
+ LEC_Bribe_Officals_liuqiu:0 "贿赂[526.GetName]官员"
+ LEC_Establish_liuqiu_Syndicate:0 "建立[526.GetName]财团"
 
  LEC_attack_china:0 "征服[From.GetNameDef]"
  LEC_consolidate_coast:0 "巩固沿海租界"
@@ -1795,9 +1801,11 @@
  LEC_Sell_Subjects_desc:0 "将咱们的肉票卖给最高的出价者"
  LEC_Expanding_Entertainment:0 "娱乐风俗"
  LEC_Expanding_Entertainment_desc:0 "咱们可以让肉票取悦取悦市民"
+ LEC_Sell_Subjects_to_nan_mei:0 "贩卖人口到巴拉圭"
+ LEC_Sell_Subjects_to_nan_mei_desc:0 "巴拉圭和乌拉圭的荒地需要人力，他们的政府向我们发来了订单，我们必须拿下这笔大生意。"
 
  LEC_triad_enterprise:0 "犯罪活动"
- LEC_triad_enterprise_desc:0 "三合会的触角遍及全球，其犯罪网络悄然扩张。集贩毒、人口贩卖、收取保护费、洗钱及妓院等勾当于一身，年入百万暴利。虽处于政府监管之下，但严守地下活动的安全线始终至关重要。\n\n当前鸦片库存为：§G[?LEC_Opium_Stock]§!\n当前鸦片利润为：§G[?LEC_Opium_Profit]§!\n\n当前待贩人口为：§G[?LEC_Human_Traffic_Supply]§!\n当前人口贩卖利润为：§G[?LEC_Human_Traffic_Profit]§!\n\n当前走私军火库存为：§G[?LEC_Guns]§!\n当前军火走私利润为：§G[?LEC_Guns_Profits]§!"
+ LEC_triad_enterprise_desc:0 "帮会的触角遍及全球，其犯罪网络悄然扩张。集贩毒、人口贩卖、收取保护费、洗钱及妓院等勾当于一身，年入百万暴利。虽处于政府监管之下，但严守地下活动的安全线始终至关重要。\n\n当前鸦片库存为：§G[?LEC_Opium_Stock]§!\n当前鸦片利润为：§G[?LEC_Opium_Profit]§!\n\n当前待贩人口为：§G[?LEC_Human_Traffic_Supply]§!\n当前人口贩卖利润为：§G[?LEC_Human_Traffic_Profit]§!\n\n当前走私军火库存为：§G[?LEC_Guns]§!\n当前军火走私利润为：§G[?LEC_Guns_Profits]§!"
  LEC_Smuggle_Arms_AOG:0 "从[AOG.GetName]走私武器"
  LEC_Smuggle_Arms_QIE:0 "从[QIE.GetName]走私武器"
  LEC_Smuggle_Arms_JAP:0 "从[JAP.GetName]走私武器"
@@ -2230,10 +2238,6 @@
  LEC_expand_operation_xiamen:0 "在[802.GetName]扩展黑帮活动"
  LEC_Bribe_Officals_xiamen:0 "贿赂[802.GetName]官员"
  LEC_Establish_xiamen_Syndicate:0 "建立[802.GetName]财团"
- LEC_france_weihaiwei:0 "取得威海卫地区"
- LEC_expand_operation_weihaiwei:0 "在[996.GetName]扩展黑帮活动"
- LEC_Bribe_Officals_weihaiwei:0 "贿赂[996.GetName]官员"
- LEC_Establish_weihaiwei_Syndicate:0 "建立[996.GetName]财团"
  LEC_buy_bei_feng_qun_dao:0 "购买背风群岛"
 
  legcities.45.t:0 "黑帮联合夺取权力"
@@ -2371,6 +2375,8 @@
  LEC_triad_du_yue_sheng_party_long:0 "恒社\n§g恒社创立于1932年，尽管内核依旧是帮会组织，但是批上了一件民众社团的外衣。它的组织规程所标示的宗旨，用了很体面的二十个字，即“进德修业，崇道尚义，互信互助，服务社会，效忠国家”，规定由社员大会选举理监事若干人，推选总干事一人，副总千事一至二人，处理日常社务；下设总务、组织、财务、京剧、交际、职业介绍等组。这仅是表面，实际恒社虽有理监事会，理监事的产生虽具有选举手续，但人选一向由杜月笙事前指定，只在社员大会宣读名单，大家照例举手通过而已。社的权力既不在社员大会，也不在理事会，而在杜月笙个人。一切社务总是先由他作出决定，然后通过理事会或社员大会，作为大家的决定。恒社是杜月笙御用的组织工具。当时的帮会组织披上社团外衣公开活动的，恒社是较早的一个。§!"
  LEC_triad_huang_jin_rong_party:0 "忠信社"
  LEC_triad_huang_jin_rong_party_long:0 "忠信社\n§g自杜月笙叛离黄金荣，并在1932年成立恒社后。黄金荣无时无刻不对他怀有恨意，忠信社便是这样的产物，为了搞垮恒社，黄金荣默许自己的门人们组织了忠信社。但是该组织并不像恒社那样公开，哪怕是黄金荣集团内部也只有很少一部分人知道它的存在。§!"
+ LEC_triad_zhang_xiao_lin_party:0 "新亚和平促进会"
+ LEC_triad_zhang_xiao_lin_party_long:0 "新亚和平促进会\n§g对于张啸林而言，在窥窃上海的诸方势力中，唯有日本人才能使他安心合作。§!"
  LEC_triad_paternal_autocrat_party:0 "上海黑帮联合"
  LEC_triad_paternal_autocrat_party_long:0 "龙头会议\n§g上海的清帮、洪门的广州帮、安徽帮、香港的和联胜...全中国有头有脸的黑帮势力云集上海，尽管彼此仍旧未放下过去的仇怨，但是现在，在巨大的利益面前，他们不得不握手言和，至少暂时如此。§!"
  LEC_triad_national_populist_party:0 "黄道会"
